# PatternsCollection

./: CMakeLists.txt
.github/workflows/: main.yml
ChainResponsibility/cpp-source/: main.cpp
Command/cpp-source/: CMakeLists.txt
Command/cpp-source/commands/: CreateCocktailCommand.h
Command/cpp-source/cookery/: CookPool.cpp  CookPool.h
Mediator/cpp-source/: CMakeLists.txt
Mediator/cpp-source/dispatcher/: Dispatcher.h
Observer/cpp-source/: CMakeLists.txt  main.cpp
